[WinCairo] Crash in ATI display driver in accelerated compositing mode. https://bugs.webkit.org/show_bug.cgi?id=137879

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-10-20
Reviewed by Darin Adler.

Speculative fix; don't enable antialiasing when drawing textures.

* WebCoreSupport/AcceleratedCompositingContext.cpp:
(AcceleratedCompositingContext::initialize):

Canonical link: https://commits.webkit.org/155769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174919 268f45cc-cd09-0410-ab3c-d52691b4dbfc